# Crypto-Trader

./: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT_PLAN.md  README.md  manifest.txt
agents/: Backend Agent.md  Backup Migration Agent.md  Database Agent.md  Development Agent.md  Frontend Agent.md  Research Agent.md  Risk Agent.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: alerts.py  enrichment.py  health.py  movements.py  outcomes.py  performance.py  pipeline.py  polling.py  run_logs.py  tokens.py  wallets.py
backend/app/core/: config.py  data_quality.py  model_routing.py  model_task_logs.py  ollama_client.py  wallet_policy.py
backend/app/db/: __init__.py  session.py
backend/app/schemas/: __init__.py  wallets.py
backend/app/services/: market_data.py  market_price_cache.py  movement_enrichment.py  movement_ingestion.py  pipeline.py  run_logs.py  signal_outcomes.py  wallet_performance.py
backend/app/workers/: wallet_polling.py
backend/tests/: test_stage0.py  test_stage1.py  test_stage2.py
backup/: backup_app_config.sh  backup_postgres.sh  restore_postgres.sh
database/seed/: README.md
docker/: README.md
frontend/: index.html  package-lock.json  package.json
memory/: Agent Operating Rules.md  Product Vision.md
openclaw_crypto_wallet_intelligence_package/: CHANGELOG.md  README.md  docker-compose.yml  manifest.txt
scripts/: db_migrate.sh  db_status.sh  generate_docs.sh  install_ollama_qwen3_4b.sh  stage0_validate.sh  stage1_validate.sh  stage2_validate.sh  test_ollama_qwen3_4b.sh
workers/: README.md
(+39 files in other folders)
