[project]
name = "crypto-wallet-intelligence-backend"
version = "0.1.0-dev"
description = "FastAPI backend skeleton for the Crypto Wallet Intelligence and Paper Trading App."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.14",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
